--- a/gym-app/src/index.css
+++ b/gym-app/src/index.css
@@ -11,3 +11,53 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav-padding {
+  margin-top: 4rem;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 4rem;
+}
+
+nav div {
+  width: 100%;
+  height: 100%;
+  max-width: 1000px;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  text-decoration: none!important;
+  color: white!important;
+}
+
+.hero {
+  width: 100vw;
+  max-height: 500px;
+  overflow: hidden;
+  position: relative;
+}
+
+.hero button {
+  position: absolute;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  transition: transform 0.3s ease;
+}
+
+.hero button:hover {
+  transform: scale(1.1);
+}
+
+.hero img {
+  object-fit: cover;
+  width: 100%;
+}
