--- a/gym-app/src/index.css
+++ b/gym-app/src/index.css
@@ -12,6 +12,14 @@ code {
     monospace;
 }
 
+.w-100 {
+  width: 100%;
+}
+
+.rel {
+  position: relative;
+}
+
 .nav-padding {
   margin-top: 4rem;
 }
@@ -22,6 +30,7 @@ nav {
   right: 0;
   left: 0;
   height: 4rem;
+  z-index: 50;
 }
 
 nav div {
@@ -38,7 +47,7 @@ a {
 }
 
 .hero {
-  width: 100vw;
+  width: 100%;
   max-height: 500px;
   overflow: hidden;
   position: relative;
@@ -46,9 +55,12 @@ a {
 
 .hero button {
   position: absolute;
+  color: white;
   border: none;
+  font-size: 30px;
   border-radius: 4px;
-  padding: 10px 20px;
+  padding: 20px 40px;
+  background-color: rgba(0, 0, 0, 0.75);
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   transition: transform 0.3s ease;
 }
@@ -61,3 +73,70 @@ a {
   object-fit: cover;
   width: 100%;
 }
+
+#home .title {
+  border-bottom: 4px solid rgb(0, 0, 0);
+  max-width: fit-content;
+  box-shadow: 0px 5px 5px -5px rgba(82, 82, 82, 0.5);
+}
+
+.title h2 {
+  font-size: 45px;
+  font-weight: 900;
+  text-shadow: 2px 2px 4px rgba(105, 99, 99, 0.7);
+  color: rgb(0, 0, 0)!important;
+}
+
+#home .camp {
+  position: relative;
+  width: 400px;
+  height: 300px;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+}
+
+#home .camp:hover {
+  transform: scale(1.05);
+}
+
+#home .camp img {
+  object-fit: cover;
+  width: 100%;
+  border-radius: 5px;
+}
+
+#home .camp section {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.65);
+  right: 0;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  border-radius: 5px;
+}
+
+.camp-cont {
+  max-width: 1000px;
+}
+
+.camp-bg { 
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -5;
+  transition: opacity 0.4s ease;
+  filter: blur(5px);
+  background-color: black;
+}
+
+.camp-bg img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+
