--- a/gym-app/src/index.css
+++ b/gym-app/src/index.css
@@ -16,8 +16,21 @@ code {
   width: 100%;
 }
 
+.max-w {
+  max-width: 1000px;
+}
+
 .rel {
   position: relative;
+}
+
+.bor-btm {
+  border-bottom: 4px solid rgb(0, 0, 0);
+  max-width: fit-content;
+}
+
+.light {
+  background-color: #f0f0f0;
 }
 
 .nav-padding {
@@ -39,6 +52,12 @@ nav div {
   max-width: 1000px;
 }
 
+footer {
+  width: 100%;
+  padding: 25px;
+  position: relative;
+}
+
 a {
   margin: 0;
   padding: 0;
@@ -48,7 +67,7 @@ a {
 
 .hero {
   width: 100%;
-  max-height: 500px;
+  max-height: 700px;
   overflow: hidden;
   position: relative;
 }
@@ -118,6 +137,9 @@ a {
   border-radius: 5px;
 }
 
+footer h2,
+footer section,
+.about-cont,
 .program-cont,
 .camp-cont {
   max-width: 1000px;
@@ -155,7 +177,52 @@ a {
 }
 
 .program-bg {
-  background-color: rgb(228, 228, 228);
+  /* background-color: rgba(0, 0, 0, 0.178); */
+}
+
+.about-cont {
+  font-size: 26px;
+}
+
+footer h4 {
+  color: grey;
+}
+
+footer button {
+  background-color: transparent;
+  border: none;
+  color: white;
+}
+
+.sub-btn {
+  background-color: rgba(163, 163, 163, 0.178);
+  padding: 6px 12px;
+  border-radius: 5px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  transition: background-color 0.3s ease;
+}
+
+.sub-btn:hover {
+  background-color: grey;
+}
+
+footer input {
+  padding: 6px 12px;
+  border-radius: 5px;
+}
+
+#about img {
+  width: 100%;
+  object-fit: cover;
+  z-index: 5;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  max-height: 300px;
+}
+
+#about div{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  border-radius: 5px;
 }
 
 
